algunas mejoras a la ediccion

--- a/src/index.html
+++ b/src/index.html
@@ -116,8 +116,8 @@
                             <input type="text" class="form-control" id="itemName" required>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Categoría ID</label>
-                            <input type="number" class="form-control" id="itemCategory" required>
+                            <label class="form-label">Item No.</label>
+                            <input type="text" class="form-control" id="itemNo" required>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Cantidad</label>
